# MouseArmTransformer

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  demo.py  setup.cfg
MouseArmTransformer/: criterion.py  helper.py  inference.py  model.py
MouseArmTransformer/gui/: app.py  camera.py  gui.md  points.py  utils.py
MouseArmTransformer/lifting/: __main__.py  board.py  calibration.py  camera.py  opencv.py  rig.py  utils.py
MouseArmTransformer/notebooks/: evaluate_3D_ground_truth.ipynb  evaluate_gt_and_reprojection.ipynb  quantify_with_ground_truth.ipynb  quantify_with_gt_reprojection.ipynb  training_with_gt_sessions_final.ipynb
MouseArmTransformer/weights/: averaged_weights_epoch_5_12.pt  weights_epoch_5_loss0.11_seq2_cutoff0.999_lossweights[1, 25, 1, 1e-05].pt  weights_withleft_noelb_12_loss0.029_seq7_cutoff0.999_lossweights[1, 25, 1].pt
gui/: app.py  gui.md  points.py
lifting_transformer/: __init__.py  __main__.py  data.py  helper.py  inference.py  skeleton_constrain.py  training.py
lifting_transformer/lifting/: calibration.py  camera.py
lifting_transformer/notebooks/: evaluate_all_session_with_weights.ipynb
tests/: contents.tgz.lst  contents.whl.lst  test_inference.py
