[metadata]
name = lifting_transformer
version = attr: lifting_transformer.__version__
author = Your Name
author_email = your@email.com
description = A package for lifting transformer operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/lifting_transformer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find: 
install_requires =
    einops
    torch
    numpy
    pandas
    scipy
    opencv-python
    
include_package_data = True

[options.extras_require]
dev =
    pytest
train =
    mausspaun

[options.package_data]
lifting_transformer = ['lifting_transformer/weights/*.pt']
