[metadata]
name = MouseArmTransformer
version = attr: MouseArmTransformer.__version__
author = Mathis Lab of Adaptive Intelligence
author_email = mackenzie.mathis@epfl.ch
description = "A package for lifting 2D to 3D in a mouse arm"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/MouseArmTransformer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find: 
install_requires =
    einops
    torch
    numpy
    pandas
    scipy
    opencv-python
    
include_package_data = True

[options.extras_require]
dev =
    pytest
train =
    mausspaun

[options.package_data]
lifting_transformer = ['lifting_transformer/weights/*.pt']
